test/sema/explicitly-typed-immutable-variable.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

func main() {
    let m: int = 4;
    // CHECK: [[@LINE+1]]:6: error: cannot decrement immutable value
    m--;
}
